--- a/stories/es/0111_por-qué-los-hipopótamos-no-tienen-pelo_slides.html
+++ b/stories/es/0111_por-qué-los-hipopótamos-no-tienen-pelo_slides.html
@@ -115,7 +115,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0111/04.jpg" /></p>
-<p>El Hipopótamo no vio que el Conejo estaba allí y le pisó su patita por accidente. El Conejo empezó a gritarle, &quot;¡Oye Hipopótamo! ¿Acaso no puedes ver que estás pisando mi patita?&quot;</p>
+<p>El Hipopótamo no vio que el Conejo estaba allí y le pisó su patita sin querer. El Conejo empezó a gritarle, &quot;¡Oye Hipopótamo! ¿Acaso no puedes ver que estás pisando mi patita?&quot;</p>
 <center>
 <strong>3</strong>
 </center>
@@ -133,7 +133,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0111/06.jpg" /></p>
-<p>El Conejo fue a buscar a Fuego y le dijo, &quot;Anda y quema al Hipopótamo cuando salga del agua y vaya a comer césped. ¡Me pisó!&quot; Fuego le respondió, &quot;No hay problema, amigo Conejo. Haré exactamente lo que me pides.&quot;</p>
+<p>El Conejo fue a buscar al Fuego y le dijo, &quot;Anda y quema al Hipopótamo cuando salga del agua y vaya a comer césped. ¡Me pisó!&quot; El Fuego le respondió, &quot;No hay problema, amigo Conejo. Haré exactamente lo que me pides.&quot;</p>
 <center>
 <strong>5</strong>
 </center>
@@ -142,7 +142,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0111/07.jpg" /></p>
-<p>Más tarde, El Hipopótamo estaba comiendo césped lejos del río cuando, &quot;¡Zuum!&quot; Fuego estalló en llamas y las llamas le quemaron el pelo al Hipopótamo.</p>
+<p>Más tarde, El Hipopótamo estaba comiendo césped lejos del río cuando, &quot;¡Zuum!&quot; El Fuego estalló en llamas y las llamas le quemaron el pelo al Hipopótamo.</p>
 <center>
 <strong>6</strong>
 </center>
