--- a/stories/es/0315_la-canción-de-sakima.html
+++ b/stories/es/0315_la-canción-de-sakima.html
@@ -91,7 +91,7 @@ Ursula Nafula<br>Español</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/08.jpg" /></p>
 
-<p>A Sakima le gustaba cantarle a su hermana pequeña, especialmente cuando ella tenía hambre. A su hermana le escuchaba cantar la canción favorita de Sakima. Y se relajaba bailando con su canción.</p>
+<p>A Sakima le gustaba cantarle a su hermana pequeña, especialmente cuando ella tenía hambre. Su hermana le escuchaba cantar la canción favorita de Sakima. Y se relajaba bailando con su canción.</p>
 
 <div class="pagenum">7</div>
 <p></div><div class="pagebreak"></p>
