--- a/stories/fa/0004_بزغاله،-سگ-و-گاو.html
+++ b/stories/fa/0004_بزغاله،-سگ-و-گاو.html
@@ -70,21 +70,21 @@ Fabian Wakholi<br>فارسی</div><div class="pagebreak">
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0004/05.jpg" /></p>
 
-<p dir="rtl">راننده قصد داشت پول سگ را به او بدهد که دید بزغاله بدون پرداخت ذره ای کرایه فرار کرد.</p>
+<p dir="rtl">راننده قصد داشت پول سگ را به او بدهد که دید بزغاله بدون پرداخت ذرّه ای کرایه فرار کرد.</p>
 
 <div class="pagenum">4</div>
 <p dir="rtl"></div><div class="pagebreak"></p>
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0004/06.jpg" /></p>
 
-<p dir="rtl">راننده خیلی دلخور شد. بدون اینکه بقیهی پول سگ را پس دهد رفت.</p>
+<p dir="rtl">راننده خیلی دلخور شد. بدون اینکه بقیه ی پول سگ را پس دهد رفت.</p>
 
 <div class="pagenum">5</div>
 <p dir="rtl"></div><div class="pagebreak"></p>
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0004/07.jpg" /></p>
 
-<p dir="rtl">به همین دلیل، حتی امروز، سگ به سمت ماشین دوید تا دزدکی به داخل ماشین نگاه کند و راننده ای را که به او پول بدهکار بود را پیدا کند.</p>
+<p dir="rtl">به همین دلیل، حتی امروز، سگ به سمت ماشین دوید تا دزدکی به داخل ماشین نگاه کند و راننده ای که به او پول بدهکار بود را پیدا کند.</p>
 
 <div class="pagenum">6</div>
 <p dir="rtl"></div><div class="pagebreak"></p>
