--- a/stories/fa/0027_تصمیم.html
+++ b/stories/fa/0027_تصمیم.html
@@ -49,7 +49,7 @@ Ursula Nafula<br>فارسی</div><div class="pagebreak">
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/02.jpg" /></p>
 
-<p dir="rtl">دهکده ی من مشکلات زیادی داشت. ما مجبور بودیم که برای بردن آب ازیک لوله در یک صف طولانی بایستیم.</p>
+<p dir="rtl">دهکده ی من مشکلات زیادی داشت. ما مجبور بودیم که برای بردن آب از یک لوله در یک صف طولانی بایستیم.</p>
 
 <div class="pagenum">1</div>
 <p dir="rtl"></div><div class="pagebreak"></p>
@@ -63,14 +63,14 @@ Ursula Nafula<br>فارسی</div><div class="pagebreak">
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/04.jpg" /></p>
 
-<p dir="rtl">ما در خانههایمان را به خاطر دزدان زود قفل می کردیم.</p>
+<p dir="rtl">ما در خانه هایمان را به خاطر دزدان زود قفل می کردیم.</p>
 
 <div class="pagenum">3</div>
 <p dir="rtl"></div><div class="pagebreak"></p>
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/05.jpg" /></p>
 
-<p dir="rtl">خیلی از بچهها از مدرسه محروم میماندند.</p>
+<p dir="rtl">خیلی از بچه ها از مدرسه محروم میماندند.</p>
 
 <div class="pagenum">4</div>
 <p dir="rtl"></div><div class="pagebreak"></p>
@@ -98,7 +98,7 @@ Ursula Nafula<br>فارسی</div><div class="pagebreak">
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/09.jpg" /></p>
 
-<p dir="rtl">گاهی اوقات به خاطر خرده شیشه هایی که از روی بی احتیاطی روی زمین ریخته شده بود دست و پای مردم دچاربریدگی میشد.</p>
+<p dir="rtl">گاهی اوقات به خاطر خرده شیشه هایی که از روی بی احتیاطی روی زمین ریخته شده بود دست و پای مردم دچار بریدگی می‌شد.</p>
 
 <div class="pagenum">8</div>
 <p dir="rtl"></div><div class="pagebreak"></p>
