--- a/stories/fa/0027_تصمیم_slides.html
+++ b/stories/fa/0027_تصمیم_slides.html
@@ -97,7 +97,7 @@
 <section class="slide level1">
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/02.jpg" /></p>
-<p dir="rtl">دهکده ی من مشکلات زیادی داشت. ما مجبور بودیم که برای بردن آب ازیک لوله در یک صف طولانی بایستیم.</p>
+<p dir="rtl">دهکده ی من مشکلات زیادی داشت. ما مجبور بودیم که برای بردن آب از یک لوله در یک صف طولانی بایستیم.</p>
 <center>
 <strong>1</strong>
 </center>
@@ -115,7 +115,7 @@
 <section class="slide level1">
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/04.jpg" /></p>
-<p dir="rtl">ما در خانههایمان را به خاطر دزدان زود قفل می کردیم.</p>
+<p dir="rtl">ما در خانه هایمان را به خاطر دزدان زود قفل می کردیم.</p>
 <center>
 <strong>3</strong>
 </center>
@@ -124,7 +124,7 @@
 <section class="slide level1">
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/05.jpg" /></p>
-<p dir="rtl">خیلی از بچهها از مدرسه محروم میماندند.</p>
+<p dir="rtl">خیلی از بچه ها از مدرسه محروم میماندند.</p>
 <center>
 <strong>4</strong>
 </center>
@@ -160,7 +160,7 @@
 <section class="slide level1">
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/09.jpg" /></p>
-<p dir="rtl">گاهی اوقات به خاطر خرده شیشه هایی که از روی بی احتیاطی روی زمین ریخته شده بود دست و پای مردم دچاربریدگی میشد.</p>
+<p dir="rtl">گاهی اوقات به خاطر خرده شیشه هایی که از روی بی احتیاطی روی زمین ریخته شده بود دست و پای مردم دچار بریدگی می‌شد.</p>
 <center>
 <strong>8</strong>
 </center>
