--- a/stories/fa/0087_من-به-خواندن-علاقه-دارم.html
+++ b/stories/fa/0087_من-به-خواندن-علاقه-دارم.html
@@ -98,7 +98,7 @@ Letta Machoga<br>فارسی</div><div class="pagebreak">
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0087/09.jpg" /></p>
 
-<p dir="rtl">!من برای چه کسی میتوانم بخوانم؟ برای خودم می توانم بخوانم.</p>
+<p dir="rtl">من برای چه کسی میتوانم بخوانم؟ برای خودم می توانم بخوانم.</p>
 
 <div class="pagenum">8</div>
 <p dir="rtl"></div><div class="pagebreak"></p>
