--- a/stories/fa/0089_کالای-با-گیاهان-صحبت-می-کند.html
+++ b/stories/fa/0089_کالای-با-گیاهان-صحبت-می-کند.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>کالای  با گیاهان صحبت می کند</title>
+    <title>کالای با گیاهان صحبت می کند</title>
     <meta charset="UTF-8">
     <style type="text/css">
       body {
@@ -43,62 +43,62 @@
   <body>
 <div class='cover'><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/01.jpg" />
 
-<h1 dir="rtl" id="section">کالای  با گیاهان صحبت می کند</h1>
+<h1 dir="rtl" id="section">کالای با گیاهان صحبت می کند</h1>
 
 Ursula Nafula<br>فارسی</div><div class="pagebreak">
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/02.jpg" /></p>
 
-<p dir="rtl">این کالای  است. او هفت سال سن دارد. در زبان لوباکوسو که زبان او می باشد معنای اسمش - دختر خوب – است.</p>
+<p dir="rtl">این کالای است. او هفت سال سن دارد. در زبان لوباکوسو که زبان او می باشد معنای اسمش - دختر خوب – است.</p>
 
 <div class="pagenum">1</div>
 <p dir="rtl"></div><div class="pagebreak"></p>
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/03.jpg" /></p>
 
-<p dir="rtl">کالای  هر روز صبح که بیدار می شود با درخت پرتقال صحبت می کند. درخت پرتقال لطفا، حسابی رشد کن و به ما پرتقال های رسیده ی خوب بده.</p>
+<p dir="rtl">کالای هر روز صبح که بیدار می شود با درخت پرتقال صحبت می کند. درخت پرتقال لطفا، حسابی رشد کن و به ما پرتقال های رسیده ی خوب بده.</p>
 
 <div class="pagenum">2</div>
 <p dir="rtl"></div><div class="pagebreak"></p>
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/04.jpg" /></p>
 
-<p dir="rtl">کالای  تا مدرسه راه می رود. در راه با علف ها صحبت می کند. علف ها، لطفا بیشتر رشد کنید و سبز شوید و خشک نشوید.</p>
+<p dir="rtl">کالای تا مدرسه راه می رود. در راه با علف ها صحبت می کند. علف ها، لطفا بیشتر رشد کنید و سبز شوید و خشک نشوید.</p>
 
 <div class="pagenum">3</div>
 <p dir="rtl"></div><div class="pagebreak"></p>
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/05.jpg" /></p>
 
-<p dir="rtl">کالای  از کنار گل های وحشی رد می شود. گلهای وحشی لطفا، مرتب شکوفه بزنید که من بتوانم شما را در موهایم قرار دهم.</p>
+<p dir="rtl">کالای از کنار گل های وحشی رد می شود. گلهای وحشی لطفا، مرتب شکوفه بزنید که من بتوانم شما را در موهایم قرار دهم.</p>
 
 <div class="pagenum">4</div>
 <p dir="rtl"></div><div class="pagebreak"></p>
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/06.jpg" /></p>
 
-<p dir="rtl">در مدرسه، کالای  با درختی که در وسط حیاط بود صحبت کرد.” درخت لطفا، شاخه های بزرگ برویان تا ما بتوانیم زیر سایهی تو درس بخوانیم.”</p>
+<p dir="rtl">در مدرسه، کالای با درختی که در وسط حیاط بود صحبت کرد.” درخت لطفا، شاخه های بزرگ برویان تا ما بتوانیم زیر سایه‌ی تو درس بخوانیم.”</p>
 
 <div class="pagenum">5</div>
 <p dir="rtl"></div><div class="pagebreak"></p>
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/07.jpg" /></p>
 
-<p dir="rtl">کالای  با حصار اطراف مدرسه صحبت می کند. « لطفا محکم و قوی رشد کن و جلوی وارد شدن افراد بد را بگیر.»</p>
+<p dir="rtl">کالای با حصار اطراف مدرسه صحبت می کند. “لطفا محکم و قوی رشد کن و جلوی وارد شدن افراد بد را بگیر.”</p>
 
 <div class="pagenum">6</div>
 <p dir="rtl"></div><div class="pagebreak"></p>
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/08.jpg" /></p>
 
-<p dir="rtl">وقتی کالای  از مدرسه به خانه برگشت، درخت پرتقال را دید. خلای پرسید، “آیا پرتقال هایت هنوز نرسیده ؟”</p>
+<p dir="rtl">وقتی کالای از مدرسه به خانه برگشت، درخت پرتقال را دید. کالای پرسید، “آیا پرتقال هایت هنوز نرسیده ؟”</p>
 
 <div class="pagenum">7</div>
 <p dir="rtl"></div><div class="pagebreak"></p>
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/09.jpg" /></p>
 
-<p dir="rtl">کالای  آهی کشید وگفت، “پرتقال ها هنوز سبز هستند.” کالای  گفت، “فردا تو را خواهم دید درخت پرتقال.” “شاید بعد تویک پرتقال رسیده برای من داشته باشی!”</p>
+<p dir="rtl">کالای آهی کشید وگفت، “پرتقال ها هنوز سبز هستند.” کالای گفت، “فردا تو را خواهم دید درخت پرتقال.” “شاید بعد تویک پرتقال رسیده برای من داشته باشی!”</p>
 
 <div class="pagenum">8</div>
 <p dir="rtl"></div><div class="pagebreak"></p>
