--- a/stories/fa/0095_زاما-دختری-بزرگ-وعالی-است.html
+++ b/stories/fa/0095_زاما-دختری-بزرگ-وعالی-است.html
@@ -84,14 +84,14 @@ Michael Oguttu<br>فارسی</div><div class="pagebreak">
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/07.jpg" /></p>
 
-<p dir="rtl">مادرم به من یادآوری میکند، “مسواک زدن را فراموش نکن. من به مادرم میگویم، “من! هرگز”</p>
+<p dir="rtl">مادرم به من یادآوری میکند، “مسواک زدن را فراموش نکن. من به مادرم میگویم، “من! هرگز!”</p>
 
 <div class="pagenum">6</div>
 <p dir="rtl"></div><div class="pagebreak"></p>
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/08.jpg" /></p>
 
-<p dir="rtl">بعد از شستن، من به پدربزرگ و آنتی سلام می کنم وداشتن روزی خوب را برایشان آرزو می کنم.</p>
+<p dir="rtl">بعد از شستن، من به پدربزرگ و آنتی سلام می کنم و داشتن روزی خوب را برایشان آرزو می کنم.</p>
 
 <div class="pagenum">7</div>
 <p dir="rtl"></div><div class="pagebreak"></p>
