--- a/stories/fa/0095_زاما-دختری-بزرگ-وعالی-است_slides.html
+++ b/stories/fa/0095_زاما-دختری-بزرگ-وعالی-است_slides.html
@@ -142,7 +142,7 @@
 <section class="slide level1">
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/07.jpg" /></p>
-<p dir="rtl">مادرم به من یادآوری میکند، &quot;مسواک زدن را فراموش نکن. من به مادرم میگویم، &quot;من! هرگز&quot;</p>
+<p dir="rtl">مادرم به من یادآوری میکند، &quot;مسواک زدن را فراموش نکن. من به مادرم میگویم، &quot;من! هرگز!&quot;</p>
 <center>
 <strong>6</strong>
 </center>
@@ -151,7 +151,7 @@
 <section class="slide level1">
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/08.jpg" /></p>
-<p dir="rtl">بعد از شستن، من به پدربزرگ و آنتی سلام می کنم وداشتن روزی خوب را برایشان آرزو می کنم.</p>
+<p dir="rtl">بعد از شستن، من به پدربزرگ و آنتی سلام می کنم و داشتن روزی خوب را برایشان آرزو می کنم.</p>
 <center>
 <strong>7</strong>
 </center>
