--- a/stories/fa/0158_مرغ-و-عقاب.html
+++ b/stories/fa/0158_مرغ-و-عقاب.html
@@ -105,7 +105,7 @@ Ann Nduku<br>فارسی</div><div class="pagebreak">
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/10.jpg" /></p>
 
-<p dir="rtl">وقتی عقاب روز بعد آمد، مرغ را در حال زیرو رو کردن ماسه ها دید، ولی خبری از سوزن نبود. بنابراین عقاب به سرعت پرواز کرد ویکی از جوجه ها را گرفت. وآن را با خود برد. بعد از آن همیشه، هر موقع سرو کله ی عقاب پیدا میشد.، مرغ را در حال زیرورو کردن ماسه ها برای پیدا کردن سوزن میدید.</p>
+<p dir="rtl">وقتی عقاب روز بعد آمد، مرغ را در حال زیرو رو کردن ماسه ها دید، ولی خبری از سوزن نبود. بنابراین عقاب به سرعت پرواز کرد ویکی از جوجه ها را گرفت. وآن را با خود برد. بعد از آن همیشه، هر موقع سرو کله ی عقاب پیدا میشد، مرغ را در حال زیرورو کردن ماسه ها برای پیدا کردن سوزن میدید.</p>
 
 <div class="pagenum">9</div>
 <p dir="rtl"></div><div class="pagebreak"></p>
