--- a/stories/fa/0231_کتاب-وضعیت-آب-و-هوا.html
+++ b/stories/fa/0231_کتاب-وضعیت-آب-و-هوا.html
@@ -84,7 +84,7 @@ Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br>فارسی</div><div class="
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0231/07.jpg" /></p>
 
-<p dir="rtl">باران میبارد.</p>
+<p dir="rtl">باران می‌بارد.</p>
 
 <div class="pagenum">6</div>
 <p dir="rtl"></div><div class="pagebreak"></p>
