--- a/stories/fa/0231_کتاب-وضعیت-آب-و-هوا_slides.html
+++ b/stories/fa/0231_کتاب-وضعیت-آب-و-هوا_slides.html
@@ -142,7 +142,7 @@
 <section class="slide level1">
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0231/07.jpg" /></p>
-<p dir="rtl">باران میبارد.</p>
+<p dir="rtl">باران می‌بارد.</p>
 <center>
 <strong>6</strong>
 </center>
