--- a/stories/it/0006_anansi-e-la-saggezza.html
+++ b/stories/it/0006_anansi-e-la-saggezza.html
@@ -84,7 +84,7 @@ Ghanaian folktale<br>Italiano</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0006/07.jpg" /></p>
 
-<p>Il vaso si ruppe in mille pezzi. La saggezza si sparse ovunque, libera di essere condivisa da tutti. Ed è così che la gente imparò ad allevare, coltivare, tessere, costruire attrezzi di metallo e tutte le altre cose che la gente ora sa fare.</p>
+<p>Il vaso si ruppe in mille pezzi. La saggezza si sparse ovunque, libera di essere condivisa con tutti. Ed è così che la gente imparò ad allevare, coltivare, tessere, costruire attrezzi di metallo e tutte le altre cose che la gente ora sa fare.</p>
 
 <div class="pagenum">6</div>
 <p></div><div class="pagebreak"></p>
