--- a/stories/it/0027_decisioni.html
+++ b/stories/it/0027_decisioni.html
@@ -105,7 +105,7 @@ Ursula Nafula<br>Italiano</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/10.jpg" /></p>
 
-<p>Poi, un giorno, il rubinetto si seccò e i nostri contenitori erano vuoti.</p>
+<p>Poi, un giorno, il rubinetto si seccò e i nostri contenitori furono vuoti.</p>
 
 <div class="pagenum">9</div>
 <p></div><div class="pagebreak"></p>
