--- a/stories/it/0027_decisioni_slides.html
+++ b/stories/it/0027_decisioni_slides.html
@@ -169,7 +169,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/10.jpg" /></p>
-<p>Poi, un giorno, il rubinetto si seccò e i nostri contenitori erano vuoti.</p>
+<p>Poi, un giorno, il rubinetto si seccò e i nostri contenitori furono vuoti.</p>
 <center>
 <strong>9</strong>
 </center>
