--- a/stories/it/0052_simbegwire_slides.html
+++ b/stories/it/0052_simbegwire_slides.html
@@ -124,7 +124,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/05.jpg" /></p>
-<p>La vita di Simbegwire cambiò. Non aveva più tempo di sedersi con suo padre le mattine. Anita le dava così tante faccende di casa da fare che era sempre troppo stanca per fare i compiti la sera. Andava dritta a letto dopo cena. Il suo unico conforto era la copertina colorata che sua madre le diede. Il papà di Simbegwire non sembrava notare che sua figlia era infelice.</p>
+<p>La vita di Simbegwire cambiò. Non aveva più tempo di sedersi con suo padre le mattine. Anita le dava così tante faccende di casa da fare che era sempre troppo stanca per fare i compiti la sera. Andava dritta a letto dopo cena. Il suo unico conforto era la copertina colorata che sua madre le diede. Il papà di Simbegwire non sembrava notare che sua figlia fosse infelice.</p>
 <center>
 <strong>4</strong>
 </center>
@@ -142,7 +142,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/07.jpg" /></p>
-<p>Le cose peggiorarono per Simbegwire. Se non finiva le faccende o si lamentava, Anita la picchiava. A cena, la donna mangia gran parte del cibo, lasciando a Simbegwire solo alcuni avanzi. Ogni notte Simbegwire piangeva fino ad addormentarsi, abbracciando la copertina della mamma.</p>
+<p>Le cose peggiorarono per Simbegwire. Se non finiva le faccende o si lamentava, Anita la picchiava. A cena la donna mangiava gran parte del cibo, lasciando a Simbegwire solo alcuni avanzi. Ogni notte Simbegwire piangeva fino ad addormentarsi, abbracciando la copertina della mamma.</p>
 <center>
 <strong>6</strong>
 </center>
