--- a/stories/it/0089_khalai-parla-alle-piante.html
+++ b/stories/it/0089_khalai-parla-alle-piante.html
@@ -49,7 +49,7 @@ Ursula Nafula<br>Italiano</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/02.jpg" /></p>
 
-<p>Questa è Khalai. Lei ha sette anni. Nella sua lingua, il Lubukusu, Il suo nome significa “quella buona”.</p>
+<p>Questa è Khalai. Lei ha sette anni. Nella sua lingua, il lubukusu, il suo nome significa “quella buona”.</p>
 
 <div class="pagenum">1</div>
 <p></div><div class="pagebreak"></p>
@@ -77,7 +77,7 @@ Ursula Nafula<br>Italiano</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/06.jpg" /></p>
 
-<p>A scuola, Khalai parla all’albero in mezzo al parco. “Per favore albero, cresci i tuoi lunghi rami, così possiamo leggere sotto la tua ombra.”</p>
+<p>A scuola, Khalai parla all’albero in mezzo al parco. “Per favore albero, fai crescere i tuoi lunghi rami, così possiamo leggere sotto la tua ombra.”</p>
 
 <div class="pagenum">5</div>
 <p></div><div class="pagebreak"></p>
