--- a/stories/it/0089_khalai-parla-alle-piante_slides.html
+++ b/stories/it/0089_khalai-parla-alle-piante_slides.html
@@ -97,7 +97,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/02.jpg" /></p>
-<p>Questa è Khalai. Lei ha sette anni. Nella sua lingua, il Lubukusu, Il suo nome significa &quot;quella buona&quot;.</p>
+<p>Questa è Khalai. Lei ha sette anni. Nella sua lingua, il lubukusu, il suo nome significa &quot;quella buona&quot;.</p>
 <center>
 <strong>1</strong>
 </center>
@@ -133,7 +133,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/06.jpg" /></p>
-<p>A scuola, Khalai parla all'albero in mezzo al parco. &quot;Per favore albero, cresci i tuoi lunghi rami, così possiamo leggere sotto la tua ombra.&quot;</p>
+<p>A scuola, Khalai parla all'albero in mezzo al parco. &quot;Per favore albero, fai crescere i tuoi lunghi rami, così possiamo leggere sotto la tua ombra.&quot;</p>
 <center>
 <strong>5</strong>
 </center>
