--- a/stories/it/0095_zama-è-grande.html
+++ b/stories/it/0095_zama-è-grande.html
@@ -91,7 +91,7 @@ Michael Oguttu<br>Italiano</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/08.jpg" /></p>
 
-<p>Dopo essermi lavato, saluto Nonno e Zia e gli auguro una buona giornata.</p>
+<p>Dopo essermi lavato, saluto Nonno e Zia e auguro loro una buona giornata.</p>
 
 <div class="pagenum">7</div>
 <p></div><div class="pagebreak"></p>
