--- a/stories/it/0156_il-coccodrillo-affamato.html
+++ b/stories/it/0156_il-coccodrillo-affamato.html
@@ -70,14 +70,14 @@ Christian G.<br>Italiano</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0156/05.jpg" /></p>
 
-<p>Dopo l’attacco, non era più affamato ed era felice.</p>
+<p>Dopo l’attacco, non fu più affamato e fu felice.</p>
 
 <div class="pagenum">4</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0156/06.jpg" /></p>
 
-<p>Fino a quando non gli torna la fame.</p>
+<p>Fino a quando non gli tornò la fame.</p>
 
 <div class="pagenum">5</div>
 <p></div><div class="pagebreak"></p>
