--- a/stories/it/0201_bimbo-asino.html
+++ b/stories/it/0201_bimbo-asino.html
@@ -126,7 +126,7 @@ Lindiwe Matshikiza<br>Italiano</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/13.jpg" /></p>
 
-<p>Quando smise di correre, era notte e Asino si era perso. “Hi-ho?” ragliò nell’oscurità. “Hi-ho?” rispose l’eco. Era da solo. Acciambellatosi su sé stesso si addormentò in un sonno profondo e tormentato.</p>
+<p>Quando smise di correre, era notte e Asino si era perso. “Hi-ho?” ragliò nell’oscurità. “Hi-ho?” rispose l’eco. Era da solo. Acciambellatosi su se stesso si addormentò in un sonno profondo e tormentato.</p>
 
 <div class="pagenum">12</div>
 <p></div><div class="pagebreak"></p>
