--- a/stories/it/0234_andiswa-stella-del-calcio.html
+++ b/stories/it/0234_andiswa-stella-del-calcio.html
@@ -70,7 +70,7 @@ Eden Daniels<br>Italiano</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0234/05.jpg" /></p>
 
-<p>Il giorno seguente, a scuola si teneva una grande partita di calcio. Il coach era preoccupato perché il suo miglio giocatore era ammalato e non poteva giocare.</p>
+<p>Il giorno seguente, a scuola si teneva una grande partita di calcio. Il coach era preoccupato perché il suo miglior giocatore era ammalato e non poteva giocare.</p>
 
 <div class="pagenum">4</div>
 <p></div><div class="pagebreak"></p>
