--- a/stories/it/0243_vacanze-con-la-nonna_slides.html
+++ b/stories/it/0243_vacanze-con-la-nonna_slides.html
@@ -133,7 +133,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/06.jpg" /></p>
-<p>Papa sveglio Odongo e Apiyo appena arrivarono al villaggio. Trovarono Nyar-Kanyada, la loro nonna, a riposare su un tappeto sotto un albero. Nyar-Kanyada in Luo significa &quot;Figlia della gente di Kanyada&quot;. Era una donna forte e bellissima.</p>
+<p>Papà svegliò Odongo e Apiyo appena arrivarono al villaggio. Trovarono Nyar-Kanyada, la loro nonna, mentre riposava su un tappeto sotto un albero. Nyar-Kanyada in Luo significa &quot;Figlia della gente di Kanyada&quot;. Era una donna forte e bellissima.</p>
 <center>
 <strong>5</strong>
 </center>
@@ -142,7 +142,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/07.jpg" /></p>
-<p>Nyar-Kanyada diede loro il benvenuto nella sua casa e ballò intorno alla stanza cantando con gioia. I suoi nipotini erano emozionati di dargli i regali che le avevano portato dalla città. &quot;Prima apri il mio regalo&quot; Disse Odongo. &quot;No, prima il mio!&quot; disse Apiyo.</p>
+<p>Nyar-Kanyada diede loro il benvenuto nella sua casa e ballò intorno alla stanza cantando con gioia. I suoi nipotini erano emozionati di darle regali che le avevano portato dalla città. &quot;Prima apri il mio regalo&quot; Disse Odongo. &quot;No, prima il mio!&quot; disse Apiyo.</p>
 <center>
 <strong>6</strong>
 </center>
@@ -205,7 +205,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/14.jpg" /></p>
-<p>Nyar-Kanyada insegnò i suoi nipotini come fare soffici uguali da mangiare con lo stufato. Mostrò loro come fare il riso al cocco da mangiare con il pesce arrosto.</p>
+<p>Nyar-Kanyada insegnò ai suoi nipotini come fare soffici ugali da mangiare con lo stufato. Mostrò loro come fare il riso al cocco da mangiare con il pesce arrosto.</p>
 <center>
 <strong>13</strong>
 </center>
@@ -214,7 +214,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/15.jpg" /></p>
-<p>Una mattina, Odongo portò le mucche di sua nonna a pascolare. Incapparono nella fattoria del vicino. Il contadino era arrabbiato con Odongo. Lo minacciò di tenersi le mucche per aver mangiato il suo raccolto. Dopo quel giorno, il ragazzo si assicuro che le mucche non finissero di nuovo nei guai.</p>
+<p>Una mattina, Odongo portò le mucche di sua nonna a pascolare. Incapparono nella fattoria del vicino. Il contadino era arrabbiato con Odongo. Lo minacciò di tenersi le mucche per aver mangiato il suo raccolto. Dopo quel giorno il bambino si assicurò che le mucche non finissero di nuovo nei guai.</p>
 <center>
 <strong>14</strong>
 </center>
@@ -223,7 +223,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/16.jpg" /></p>
-<p>In un altro giorno, i bambini andarono al mercato con Nyar-Kanyada. Lei aveva una bancarella che vendeva verdure, zucchero e sale. Ad Apiyo piaceva dire ai clienti i prezzi della merce. Odongo preparava i sacchetti con le cose che clienti avevano comprato.</p>
+<p>Un altro giorno, i bambini andarono al mercato con Nyar-Kanyada. Lei aveva una bancarella che vendeva verdure, zucchero e sale. Ad Apiyo piaceva dire ai clienti i prezzi della merce. Odongo preparava i sacchetti con le cose che i clienti avevano comprato.</p>
 <center>
 <strong>15</strong>
 </center>
@@ -241,7 +241,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/18.jpg" /></p>
-<p>Ma, troppo presto, le vacanze finirlo e i bambini dovettero tornare in città. Nyar-Kanyada diede a Odongo un cappello e ad Apiyo una felpa. Preparò del cibo ber il loro viaggio.</p>
+<p>Ma troppo presto le vacanze finirono e i bambini dovettero tornare in città. Nyar-Kanyada diede a Odongo un cappello e ad Apiyo una felpa. Preparò del cibo per il loro viaggio.</p>
 <center>
 <strong>17</strong>
 </center>
@@ -268,7 +268,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/21.jpg" /></p>
-<p>Quando Odongo e Apiyo tornarono a scuola, raccontarono i loro amici della vita nel villaggio. Alcuni bambini pensavano che la vita in città era bella. Altri pensavano che il villaggio era meglio. Ma soprattutto, tutti concordarono sul fatto che Odongo e Apiyo avessero una nonna fantastica!</p>
+<p>Quando Odongo e Apiyo tornarono a scuola, raccontarono i loro amici della vita nel villaggio. Alcuni bambini pensarono che la vita in città fosse bella. Altri pensarono che il villaggio fosse meglio. Ma soprattutto, tutti concordarono sul fatto che Odongo e Apiyo avessero una nonna fantastica!</p>
 <center>
 <strong>20</strong>
 </center>
