--- a/stories/it/0262_magozwe_slides.html
+++ b/stories/it/0262_magozwe_slides.html
@@ -196,7 +196,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/13.jpg" /></p>
-<p>Magozwe pensò a questo posto nuovo e al fatto di andare a scuola. E se suo zio aveva ragione? Se lui fosse davvero troppo stupido per imparare qualcosa? E se lo avessero picchiato in questo nuovo posto? Era spaventato. &quot;Forse è meglio che rimango a vivere per strada&quot; Pensò.</p>
+<p>Magozwe pensò a questo posto nuovo e al fatto di andare a scuola. E se suo zio avesse ragione? Se lui fosse davvero troppo stupido per imparare qualcosa? E se lo avessero picchiato in questo nuovo posto? Era spaventato. &quot;Forse è meglio che rimanga a vivere per strada&quot; Pensò.</p>
 <center>
 <strong>12</strong>
 </center>
