--- a/stories/es/0003_ropa-de-escuela.html
+++ b/stories/es/0003_ropa-de-escuela.html
@@ -56,7 +56,7 @@ Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br>Español</div><div class="pa
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0003/03.jpg" /></p>
 
-<p>Esta chompa es grande.</p>
+<p>Este suéter es grande.</p>
 
 <div class="pagenum">2</div>
 <p></div><div class="pagebreak"></p>
