--- a/stories/es/0003_ropa-de-escuela_slides.html
+++ b/stories/es/0003_ropa-de-escuela_slides.html
@@ -106,7 +106,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0003/03.jpg" /></p>
-<p>Esta chompa es grande.</p>
+<p>Este suéter es grande.</p>
 <center>
 <strong>2</strong>
 </center>
