--- a/stories/es/0111_por-qué-los-hipopótamos-no-tienen-pelo.html
+++ b/stories/es/0111_por-qué-los-hipopótamos-no-tienen-pelo.html
@@ -63,7 +63,7 @@ Basilio Gimo, David Ker<br>Español</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0111/04.jpg" /></p>
 
-<p>El Hipopótamo no vio que el Conejo estaba allí y le pisó su patita por accidente. El Conejo empezó a gritarle, “¡Oye Hipopótamo! ¿Acaso no puedes ver que estás pisando mi patita?”</p>
+<p>El Hipopótamo no vio que el Conejo estaba allí y le pisó su patita sin querer. El Conejo empezó a gritarle, “¡Oye Hipopótamo! ¿Acaso no puedes ver que estás pisando mi patita?”</p>
 
 <div class="pagenum">3</div>
 <p></div><div class="pagebreak"></p>
@@ -77,14 +77,14 @@ Basilio Gimo, David Ker<br>Español</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0111/06.jpg" /></p>
 
-<p>El Conejo fue a buscar a Fuego y le dijo, “Anda y quema al Hipopótamo cuando salga del agua y vaya a comer césped. ¡Me pisó!” Fuego le respondió, “No hay problema, amigo Conejo. Haré exactamente lo que me pides.”</p>
+<p>El Conejo fue a buscar al Fuego y le dijo, “Anda y quema al Hipopótamo cuando salga del agua y vaya a comer césped. ¡Me pisó!” El Fuego le respondió, “No hay problema, amigo Conejo. Haré exactamente lo que me pides.”</p>
 
 <div class="pagenum">5</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0111/07.jpg" /></p>
 
-<p>Más tarde, El Hipopótamo estaba comiendo césped lejos del río cuando, “¡Zuum!” Fuego estalló en llamas y las llamas le quemaron el pelo al Hipopótamo.</p>
+<p>Más tarde, El Hipopótamo estaba comiendo césped lejos del río cuando, “¡Zuum!” El Fuego estalló en llamas y las llamas le quemaron el pelo al Hipopótamo.</p>
 
 <div class="pagenum">6</div>
 <p></div><div class="pagebreak"></p>
