--- a/stories/es/0315_la-canción-de-sakima_slides.html
+++ b/stories/es/0315_la-canción-de-sakima_slides.html
@@ -151,7 +151,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/08.jpg" /></p>
-<p>A Sakima le gustaba cantarle a su hermana pequeña, especialmente cuando ella tenía hambre. A su hermana le escuchaba cantar la canción favorita de Sakima. Y se relajaba bailando con su canción.</p>
+<p>A Sakima le gustaba cantarle a su hermana pequeña, especialmente cuando ella tenía hambre. Su hermana le escuchaba cantar la canción favorita de Sakima. Y se relajaba bailando con su canción.</p>
 <center>
 <strong>7</strong>
 </center>
