--- a/stories/fa/0004_بزغاله،-سگ-و-گاو_slides.html
+++ b/stories/fa/0004_بزغاله،-سگ-و-گاو_slides.html
@@ -124,7 +124,7 @@
 <section class="slide level1">
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0004/05.jpg" /></p>
-<p dir="rtl">راننده قصد داشت پول سگ را به او بدهد که دید بزغاله بدون پرداخت ذره ای کرایه فرار کرد.</p>
+<p dir="rtl">راننده قصد داشت پول سگ را به او بدهد که دید بزغاله بدون پرداخت ذرّه ای کرایه فرار کرد.</p>
 <center>
 <strong>4</strong>
 </center>
@@ -133,7 +133,7 @@
 <section class="slide level1">
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0004/06.jpg" /></p>
-<p dir="rtl">راننده خیلی دلخور شد. بدون اینکه بقیهی پول سگ را پس دهد رفت.</p>
+<p dir="rtl">راننده خیلی دلخور شد. بدون اینکه بقیه ی پول سگ را پس دهد رفت.</p>
 <center>
 <strong>5</strong>
 </center>
@@ -142,7 +142,7 @@
 <section class="slide level1">
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0004/07.jpg" /></p>
-<p dir="rtl">به همین دلیل، حتی امروز، سگ به سمت ماشین دوید تا دزدکی به داخل ماشین نگاه کند و راننده ای را که به او پول بدهکار بود را پیدا کند.</p>
+<p dir="rtl">به همین دلیل، حتی امروز، سگ به سمت ماشین دوید تا دزدکی به داخل ماشین نگاه کند و راننده ای که به او پول بدهکار بود را پیدا کند.</p>
 <center>
 <strong>6</strong>
 </center>
