--- a/stories/fa/0111_چرا-کرگدن-مو-نداشت.html
+++ b/stories/fa/0111_چرا-کرگدن-مو-نداشت.html
@@ -77,7 +77,7 @@ Basilio Gimo, David Ker<br>فارسی</div><div class="pagebreak">
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0111/06.jpg" /></p>
 
-<p dir="rtl">خرگوش رفت تا آتش پیدا کند وگفت، “برو، وقتی که کرگدن از آب بیرون آمد تا علف بخورد، او را بسوزان. او روی من پا گذاشت!” آتش پاسخ داد، “هیچ مشکلی نیست، خرگوش جان، دوست من، من آنچه را که تو خواستی انجام می دهم.”</p>
+<p dir="rtl">خرگوش رفت تا آتش پیدا کند وگفت، “برو، وقتی که کرگدن از آب بیرون آمد تا علف بخورد، او را بسوزان. او روی من پا گذاشت!” آتش پاسخ داد، “هیچ مشکلی نیست، خرگوش جان، دوست من، من آنچه را که تو خواستی انجام می‌دهم.”</p>
 
 <div class="pagenum">5</div>
 <p dir="rtl"></div><div class="pagebreak"></p>
