--- a/stories/fa/0111_چرا-کرگدن-مو-نداشت_slides.html
+++ b/stories/fa/0111_چرا-کرگدن-مو-نداشت_slides.html
@@ -133,7 +133,7 @@
 <section class="slide level1">
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0111/06.jpg" /></p>
-<p dir="rtl">خرگوش رفت تا آتش پیدا کند وگفت، &quot;برو، وقتی که کرگدن از آب بیرون آمد تا علف بخورد، او را بسوزان. او روی من پا گذاشت!&quot; آتش پاسخ داد، &quot;هیچ مشکلی نیست، خرگوش جان، دوست من، من آنچه را که تو خواستی انجام می دهم.&quot;</p>
+<p dir="rtl">خرگوش رفت تا آتش پیدا کند وگفت، &quot;برو، وقتی که کرگدن از آب بیرون آمد تا علف بخورد، او را بسوزان. او روی من پا گذاشت!&quot; آتش پاسخ داد، &quot;هیچ مشکلی نیست، خرگوش جان، دوست من، من آنچه را که تو خواستی انجام می‌دهم.&quot;</p>
 <center>
 <strong>5</strong>
 </center>
