--- a/stories/fa/0129_برادر-کوچک-تنبل.html
+++ b/stories/fa/0129_برادر-کوچک-تنبل.html
@@ -70,8 +70,7 @@ Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br>فارسی</div><div class="
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0129/05.jpg" /></p>
 
-<p dir="rtl">من دیگ را به
-هم می زنم.</p>
+<p dir="rtl">من دیگ را هم می زنم.</p>
 
 <div class="pagenum">4</div>
 <p dir="rtl"></div><div class="pagebreak"></p>
