--- a/stories/fa/0129_برادر-کوچک-تنبل_slides.html
+++ b/stories/fa/0129_برادر-کوچک-تنبل_slides.html
@@ -124,7 +124,7 @@
 <section class="slide level1">
 
 <p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0129/05.jpg" /></p>
-<p dir="rtl">من دیگ را به هم می زنم.</p>
+<p dir="rtl">من دیگ را هم می زنم.</p>
 <center>
 <strong>4</strong>
 </center>
