--- a/stories/it/0030_sentimenti.html
+++ b/stories/it/0030_sentimenti.html
@@ -77,7 +77,7 @@ Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br>Italiano</div><div class="pa
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0030/06.jpg" /></p>
 
-<p>Mi sento amata quando mia mamma mi abbraccio.</p>
+<p>Mi sento amata quando mia mamma mi abbraccia.</p>
 
 <div class="pagenum">5</div>
 <p></div><div class="pagebreak"></p>
