--- a/stories/it/0030_sentimenti_slides.html
+++ b/stories/it/0030_sentimenti_slides.html
@@ -133,7 +133,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0030/06.jpg" /></p>
-<p>Mi sento amata quando mia mamma mi abbraccio.</p>
+<p>Mi sento amata quando mia mamma mi abbraccia.</p>
 <center>
 <strong>5</strong>
 </center>
