--- a/stories/it/0095_zama-è-grande_slides.html
+++ b/stories/it/0095_zama-è-grande_slides.html
@@ -151,7 +151,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/08.jpg" /></p>
-<p>Dopo essermi lavato, saluto Nonno e Zia e gli auguro una buona giornata.</p>
+<p>Dopo essermi lavato, saluto Nonno e Zia e auguro loro una buona giornata.</p>
 <center>
 <strong>7</strong>
 </center>
