--- a/stories/it/0156_il-coccodrillo-affamato_slides.html
+++ b/stories/it/0156_il-coccodrillo-affamato_slides.html
@@ -124,7 +124,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0156/05.jpg" /></p>
-<p>Dopo l'attacco, non era più affamato ed era felice.</p>
+<p>Dopo l’attacco, non fu più affamato e fu felice.</p>
 <center>
 <strong>4</strong>
 </center>
@@ -133,7 +133,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0156/06.jpg" /></p>
-<p>Fino a quando non gli torna la fame.</p>
+<p>Fino a quando non gli tornò la fame.</p>
 <center>
 <strong>5</strong>
 </center>
