--- a/stories/it/0201_bimbo-asino_slides.html
+++ b/stories/it/0201_bimbo-asino_slides.html
@@ -196,7 +196,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/13.jpg" /></p>
-<p>Quando smise di correre, era notte e Asino si era perso. &quot;Hi-ho?&quot; ragliò nell'oscurità. &quot;Hi-ho?&quot; rispose l'eco. Era da solo. Acciambellatosi su sé stesso si addormentò in un sonno profondo e tormentato.</p>
+<p>Quando smise di correre, era notte e Asino si era perso. &quot;Hi-ho?&quot; ragliò nell'oscurità. &quot;Hi-ho?&quot; rispose l'eco. Era da solo. Acciambellatosi su se stesso si addormentò in un sonno profondo e tormentato.</p>
 <center>
 <strong>12</strong>
 </center>
