--- a/stories/it/0234_andiswa-stella-del-calcio_slides.html
+++ b/stories/it/0234_andiswa-stella-del-calcio_slides.html
@@ -124,7 +124,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0234/05.jpg" /></p>
-<p>Il giorno seguente, a scuola si teneva una grande partita di calcio. Il coach era preoccupato perché il suo miglio giocatore era ammalato e non poteva giocare.</p>
+<p>Il giorno seguente, a scuola si teneva una grande partita di calcio. Il coach era preoccupato perché il suo miglior giocatore era ammalato e non poteva giocare.</p>
 <center>
 <strong>4</strong>
 </center>
