--- a/stories/it/0294_le-banane-della-nonna_slides.html
+++ b/stories/it/0294_le-banane-della-nonna_slides.html
@@ -133,7 +133,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/06.jpg" /></p>
-<p>Due giorni dopo, nonna mi mando a prendere il suo bastone da passeggio in camera sua. Appena aprii la porta fui benvenuta da un forte odore di banane in maturazione. Nella stanza interna c'era il grande cesto in vimini della nonna. Era ben nascosto da una vecchia coperta. Io la sollevai e odorai quel fantastico profumo.</p>
+<p>Due giorni dopo, nonna mi mandò a prendere il suo bastone da passeggio in camera sua. Appena aprii la porta fui benvenuta da un forte odore di banane in maturazione. Nella stanza interna c'era il grande cesto in vimini della nonna. Era ben nascosto da una vecchia coperta. Io la sollevai e odorai quel fantastico profumo.</p>
 <center>
 <strong>5</strong>
 </center>
@@ -142,7 +142,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/07.jpg" /></p>
-<p>La voce di nonna mi fece sobbalzare quando chiamò. &quot;Che cosa stai facendo? sbrigati e portami il bastone!&quot; Io mi sbrigai col bastone. &quot;Perché sorridi?&quot; Chiese nonna. La sua domanda mi fece realizzare che stavo ancora sorridendo per la scoperta del suo posto magico.</p>
+<p>La voce di nonna mi fece sobbalzare quando mi chiamò. &quot;Che cosa stai facendo? sbrigati e portami il bastone!&quot; Io mi sbrigai col bastone. &quot;Perché sorridi?&quot; Chiese nonna. La sua domanda mi fece realizzare che stavo ancora sorridendo per la scoperta del suo posto magico.</p>
 <center>
 <strong>6</strong>
 </center>
@@ -151,7 +151,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/08.jpg" /></p>
-<p>Il giorno seguente, quando nonna venne a visitare mia madre, Io corsi dentro casa per controllare le banane ancora una volta. Ce n'erano tante ben mature. Ne presi una e la nascosi sotto il mio vestito. Dopo aver coperto il cesto di nuovo, andai dietro la casa e la mangiai in fretta. Era la banana più dolce che avessi mai assaggiato.</p>
+<p>Il giorno seguente, quando nonna venne a visitare mia madre, io corsi dentro casa per controllare le banane ancora una volta. Ce n'erano tante ben mature. Ne presi una e la nascosi sotto il mio vestito. Dopo aver coperto il cesto di nuovo, andai dietro la casa e la mangiai in fretta. Era la banana più dolce che avessi mai assaggiato.</p>
 <center>
 <strong>7</strong>
 </center>
@@ -160,7 +160,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/09.jpg" /></p>
-<p>Il giorno seguente, mentre nonna era in giardino a raccogliere verdure, Io sgattaiolai e sbirciai le banane. Erano quasi tutte mature. Non potei fare a meno che prenderne un paio di caschi. Appena sgattaiolai verso la porta, udii nonna tossire fuori. Riuscii a nascondere le banane sotto il mio vestito e camminare di fianco a lei.</p>
+<p>Il giorno seguente, mentre nonna era in giardino a raccogliere le verdure, io sgattaiolai e sbirciai le banane. Erano quasi tutte mature. Non potei fare a meno che prenderne un paio di caschi. Appena sgattaiolai verso la porta, udii nonna tossire fuori. Riuscii a nascondere le banane sotto il mio vestito e camminare di fianco a lei.</p>
 <center>
 <strong>8</strong>
 </center>
@@ -169,7 +169,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/10.jpg" /></p>
-<p>Il giorno seguente era giorno di mercato. Nonna si alzò presto. Lei prendeva sempre le banane mature e la manioca per venderle al mercato. Io non mi sbrigai per visitarla quel giorno. Ma non avrei potuto evitarla a lungo.</p>
+<p>Il giorno seguente era il giorno del mercato. Nonna si alzò presto. Lei prendeva sempre le banane mature e la manioca per venderle al mercato. Io non mi sbrigai per visitarla quel giorno. Ma non avrei potuto evitarla a lungo.</p>
 <center>
 <strong>9</strong>
 </center>
@@ -178,7 +178,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/11.jpg" /></p>
-<p>Più tardi sulla sera fui chiamata da mia mamma, mio padre e mia nonna. Sapevo perché. Quella notte, quando andai a letto per dormire, sapevo che non avrei mai più rubato, né da mia nonna, né dai miei genitori e sicuramente da nessun altro.</p>
+<p>Più tardi verso sera fui chiamata da mia mamma, mio padre e mia nonna. Sapevo perché. Quella notte, quando andai a letto per dormire, sapevo che non avrei mai più rubato, né da mia nonna, né dai miei genitori e sicuramente da nessun altro.</p>
 <center>
 <strong>10</strong>
 </center>
