--- a/stories/it/0302_fuoco.html
+++ b/stories/it/0302_fuoco.html
@@ -63,21 +63,21 @@ Deborah Namugosa, Beatrice Nabune, Alison Tukei, Rose Sabano<br>Italiano</div><d
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0302/04.jpg" /></p>
 
-<p>il fuoco cucina.</p>
+<p>Il fuoco cucina.</p>
 
 <div class="pagenum">3</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0302/05.jpg" /></p>
 
-<p>il fuoco riscalda.</p>
+<p>Il fuoco riscalda.</p>
 
 <div class="pagenum">4</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0302/06.jpg" /></p>
 
-<p>il fuoco da luce.</p>
+<p>Il fuoco dà luce.</p>
 
 <div class="pagenum">5</div>
 <p></div><div class="pagebreak"></p>
