--- a/stories/it/0302_fuoco_slides.html
+++ b/stories/it/0302_fuoco_slides.html
@@ -115,7 +115,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0302/04.jpg" /></p>
-<p>il fuoco cucina.</p>
+<p>Il fuoco cucina.</p>
 <center>
 <strong>3</strong>
 </center>
@@ -124,7 +124,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0302/05.jpg" /></p>
-<p>il fuoco riscalda.</p>
+<p>Il fuoco riscalda.</p>
 <center>
 <strong>4</strong>
 </center>
@@ -133,7 +133,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0302/06.jpg" /></p>
-<p>il fuoco da luce.</p>
+<p>Il fuoco dà luce.</p>
 <center>
 <strong>5</strong>
 </center>
