--- a/stories/ko/0315_사키마의-노래.html
+++ b/stories/ko/0315_사키마의-노래.html
@@ -105,7 +105,7 @@ Ursula Nafula<br>한국어</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/10.jpg" /></p>
 
-<p>한 저녁 부모님이 돌아왔을 때, 그들은 아주 조용했어요. 사키마는 무언가 잘못됐다는 것을 깨달았어요,</p>
+<p>한 저녁 부모님이 돌아왔을 때, 그들은 아주 조용했어요. 사키마는 무언가 잘못됐다는 것을 깨달았어요.</p>
 
 <div class="pagenum">9</div>
 <p></div><div class="pagebreak"></p>
